fix(agenda/booking): fix issues and reformat the layout
Squashed commit of the following:

commit bf965f13f717663c806910855e10e3dcbc778c50
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 03:28:37 2025 +0800

    layout(agenda): show the club logo on the top

commit 731f3b45648ce267d8339ebe8eb5290925c502b2
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 03:26:06 2025 +0800

    fix(booking): fixed the display of presentation title and tooltip

commit 28a1730a61a4b76702656292cf8870e974e41b8c
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 02:12:01 2025 +0800

    format(booking): update the styles of some elements

commit 140f781bdd703b37e5d9c71a2e1f6bba433718d7
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 01:51:23 2025 +0800

    feat(booking): add an alert info to My Completed Roles

commit be6f56c42cbaa65a11aaebeacc8c8ca37eaffac0
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 01:41:19 2025 +0800

    fix(agenda/booking): solved a few regression issues

commit 3966180ebc45913bf530de7f009929530448aa24
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 01:01:04 2025 +0800

    config(booking): don't show prepared speaker sessions under My Completed Roles

commit da120b1e3b3f57431b819ee9d10d4941e8e9dc40
Author: PGCaptain <kylewei@gmail.com>
Date:   Thu Oct 30 00:50:49 2025 +0800

    format(base): adjust the font families of body, headers and buttons

commit 61d46ed9a2a3c3b028a837e8709c32db165e0539
Author: PGCaptain <kylewei@gmail.com>
Date:   Wed Oct 29 14:45:09 2025 +0800

    custom(theme): halloween update

commit c817b5537e91c6026a979c9b83d412da942953da
Author: PGCaptain <kylewei@gmail.com>
Date:   Wed Oct 29 10:51:35 2025 +0800

    fix(agenda): add suppport to presentations

commit 6c53d8778721a7bb4afcaf50c3939d53dac36089
Author: PGCaptain <kylewei@gmail.com>
Date:   Tue Oct 28 13:53:08 2025 +0800

    feat(booking): enforce some booking rules

--- a/static/css/agenda.css
+++ b/static/css/agenda.css
@@ -27,6 +27,7 @@
 }
 
 .section-row {
+    font-family: 'Montserrat', sans-serif;
     background-color: #772432;
     font-weight: bold;
     color: white;
