--- a/static/css/speech_logs.css
+++ b/static/css/speech_logs.css
@@ -104,7 +104,7 @@
     margin-bottom: 0.25rem;
 }
 .speech-title {
-    font-family: 'Merriweather', serif;
+    font-family: 'Playfair Display', serif;
     font-size: 1.6em;
     font-weight: 700;
     color: #2d3748;
