--- a/templates/_speech_edit_modal.html
+++ b/templates/_speech_edit_modal.html
@@ -4,6 +4,11 @@
     <h1>Edit Speech Details</h1>
     <form id="speechEditForm" onsubmit="saveSpeechChanges(event)">
       <input type="hidden" id="edit-log-id" name="log_id" />
+      <input
+        type="hidden"
+        id="edit-session-type-title"
+        name="session_type_title"
+      />
       <div class="form-group">
         <label for="edit-speech-title">Speech Title:</label>
         <input
@@ -15,25 +20,20 @@
       </div>
       <div class="form-group-row">
         <div class="form-group">
-          <label for="edit-pathway">Pathway:</label>
+          <label for="edit-pathway" id="label-pathway-series">Pathway:</label>
           <select
             id="edit-pathway"
             name="pathway"
-            onchange="updateProjectOptions()"
+            onchange="updateDynamicOptions()"
             required
-          >
-            <option value="">-- Select Pathway --</option>
-            {% for p_name in pathways %}
-            <option value="{{ p_name }}">{{ p_name }}</option>
-            {% endfor %}
-          </select>
+          ></select>
         </div>
-        <div class="form-group">
-          <label for="edit-level">Level:</label>
+        <div class="form-group" id="level-select-group">
+          <label for="edit-level" id="label-level">Level:</label>
           <select
             id="edit-level"
             name="level"
-            onchange="updateProjectOptions()"
+            onchange="updateDynamicOptions()"
           >
             <option value="">-- Select Level --</option>
             {% for i in range(1, 6) %}
@@ -43,7 +43,9 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="edit-project">Project:</label>
+        <label for="edit-project" id="label-project-presentation"
+          >Project:</label
+        >
         <select id="edit-project" name="project_id">
           <option value="">-- Select a Project --</option>
         </select>
