--- a/static/css/agenda.css
+++ b/static/css/agenda.css
@@ -22,6 +22,17 @@
     /* This ensures it doesn't have a min-width and can shrink */
 }
 
+.project-link {
+    text-decoration: none;
+    color: inherit;
+    display: inline-block; /* Ensures the link wraps the content properly */
+}
+.project-link:hover {
+    text-decoration: underline;
+    color: #004165; /* Theme blue */
+    cursor: pointer;
+}
+
 .inline-filter-group {
     display: flex;
     align-items: center;
